# ReinforceLab

./: .gitignore  .gitmodules  README.md  last_update.txt  pyproject.toml  requirements.txt  setup.py  train.py  update_leaderboards.py
.github/workflows/: github-actions-demo.yml  github-actions-leaderboards.yml
leaderboard_bot/: last_update.txt  update_leaderboards.py
reinforcelab/: utils.py
reinforcelab/action_selectors/: __init__.py  epsilon_greedy.py
reinforcelab/action_selectors/continuous/: __init__.py  epsilon_greedy.py  noisy_action.py
reinforcelab/action_selectors/discrete/: __init__.py  discrete_action_selector.py  (+1 more)
reinforcelab/agents/: __init__.py  agent.py
reinforcelab/brains/: __init__.py  actor_critic.py  brain.py  dueling.py  dueling_q_network.py  q_network.py  q_table.py  qtable.py  vanilla.py
reinforcelab/estimators/: __init__.py  double_q_estimator.py  estimator.py  expected_sarsa_estimator.py  max_q_estimator.py  sars_estimator.py  sarsa_estimator.py
reinforcelab/experience/: priority.py
reinforcelab/memory_buffers/: __init__.py  experience_replay.py  memory_buffer.py  online_buffer.py  ordered_buffer.py
reinforcelab/networks/: __init__.py  dueling.py  vanilla.py
reinforcelab/procedures/: test.py  train.py
reinforcelab/tasks/: blackjack.py
reinforcelab/update_estimators/: __init__.py  double_dqn.py  double_q_estimator.py  expected_sarsa_estimator.py  max_q_estimator.py  q_estimator.py  sars_estimator.py  sarsa_estimator.py  update_estimator.py  vanilla.py
reinforcelab/utils/: leaderboard_utils.py
resources/: README.md
(+132 files in other folders)
