[project]
name = "reinforcelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill>=0.3.6",
    "gymnasium>=0.28",
    "matplotlib>=3.0",
    "opencv-python>=4.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.12.2",
    "torch>=2.9.1",
    "tqdm>=4.64.1",
]
